--- a/charts/trento-server/charts/trento-mcp-server/templates/middleware.yaml
+++ b/charts/trento-server/charts/trento-mcp-server/templates/middleware.yaml
@@ -1,17 +1,18 @@
-# Copyright 2025 SUSE LLC
-# SPDX-License-Identifier: Apache-2.0
-
-{{ if and .Values.mcpServer.ingress.enabled (eq .Values.mcpServer.ingress.ingressClassName "traefik") }}
+{{- /*
+Copyright 2025 SUSE LLC
+SPDX-License-Identifier: Apache-2.0
+*/}}
+---
+{{ if and .Values.ingress.enabled (eq .Values.ingress.className "traefik") }}
 apiVersion: traefik.io/v1alpha1
 kind: Middleware
 metadata:
   name: {{ include "trento-mcp-server.fullname" . }}-strip-prefix
-  namespace: {{ .Release.Namespace }}
   labels:
   {{- include "trento-mcp-server.labels" . | nindent 4 }}
 spec:
   stripPrefix:
-    prefixes: {{- range .Values.mcpServer.ingress.hosts }}
+    prefixes: {{- range .Values.ingress.hosts }}
       - {{ (first .paths).path }}
     {{- end }}
 {{- end }}
