--- a/charts/trento-server/charts/trento-mcp-server/templates/service.yaml
+++ b/charts/trento-server/charts/trento-mcp-server/templates/service.yaml
@@ -1,18 +1,20 @@
-# Copyright 2025 SUSE LLC
-# SPDX-License-Identifier: Apache-2.0
-
+{{- /*
+Copyright 2025 SUSE LLC
+SPDX-License-Identifier: Apache-2.0
+*/}}
+---
 apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "trento-mcp-server.fullname" . }}
-  namespace: {{ .Release.Namespace }}
   labels:
-    app: trento-mcp-server
-  {{- include "trento-mcp-server.labels" . | nindent 4 }}
+    {{- include "trento-mcp-server.labels" . | nindent 4 }}
 spec:
-  type: {{ .Values.mcpServer.type }}
-  selector:
-    app: trento-mcp-server
-    {{- include "trento-mcp-server.selectorLabels" . | nindent 4 }}
+  type: {{ .Values.service.type }}
   ports:
-  {{- .Values.mcpServer.ports | toYaml | nindent 2 }}
+    - name: http
+      targetPort: {{ include "trento-mcp-server.port" . }}
+      protocol: TCP
+      port: {{ include "trento-mcp-server.port" . }}
+  selector:
+    {{- include "trento-mcp-server.selectorLabels" . | nindent 4 }}
