Add mcp subchart options in the main one
Signed-off-by: Antonio Gamez Diaz <antonio.gamez@suse.com>

--- a/charts/trento-server/values.yaml
+++ b/charts/trento-server/values.yaml
@@ -22,6 +22,9 @@ global:
       password: "trento"
       tls:
         enabled: false
+  trentoMcpServer:
+    name: mcp-server
+    servicePort: 5000
 
 ### Sub Charts Specific Values ###
 trento-web:
@@ -35,6 +38,12 @@ trento-wanda:
 trento-mcp-server:
   nameOverride: mcp-server
   enabled: false
+  # mcpServer:
+  #   # Replace the below URLs with your own OpenAPI definitions if needed
+  #   oasPath:
+  #     - https:/<your-trento-url>/api/all/openapi
+  #   # Replace with public Trento server URL
+  #   trentoURL: https:/<your-trento-url>
 
 postgresql:
   enabled: true
