Expose trentoWebOrigin globally
Signed-off-by: Antonio Gamez Diaz <antonio.gamez@suse.com>

--- a/charts/trento-server/values.yaml
+++ b/charts/trento-server/values.yaml
@@ -4,6 +4,7 @@ global:
   trentoWeb:
     name: web
     servicePort: 4000
+    trentoWebOrigin: ""
   trentoWanda:
     name: wanda
     servicePort: 4000
