--- a/charts/trento-server/charts/trento-web/templates/configmap.yaml
+++ b/charts/trento-server/charts/trento-web/templates/configmap.yaml
@@ -32,7 +32,7 @@ data:
   {{- else }}
   AMQP_URL: "amqp://{{ .Values.global.rabbitmq.auth.username }}:{{ .Values.global.rabbitmq.auth.password }}@{{ .Release.Name }}-{{ .Values.global.rabbitmq.name }}:{{ .Values.global.rabbitmq.servicePort }}"
   {{- end }}
-  TRENTO_WEB_ORIGIN: "{{ .Values.trentoWebOrigin }}"
+  TRENTO_WEB_ORIGIN: "{{ include "trentoWeb.trentoWebOrigin" . }}"
   ENABLE_OIDC: "{{ .Values.oidc.enabled }}"
   OIDC_CLIENT_ID: "{{ .Values.oidc.clientId }}"
   OIDC_BASE_URL: "{{ .Values.oidc.baseUrl }}"
