--- a/charts/trento-server/charts/trento-mcp-server/values.yaml
+++ b/charts/trento-server/charts/trento-mcp-server/values.yaml
@@ -1,12 +1,7 @@
 # Copyright 2025 SUSE LLC
 # SPDX-License-Identifier: Apache-2.0
 
-## @section Global parameters
-##
-## @param global.trentoMcpServer.servicePort Global service port for Trento MCP Server
-global:
-  trentoMcpServer:
-    servicePort: ""
+
 
 ## @section Common parameters
 ##
@@ -18,10 +13,14 @@ image:
   tag: latest
   pullPolicy: Always
 
+## @param clusterDomain Default Kubernetes cluster domain
+##
+clusterDomain: cluster.local
+
 ## @param replicaCount Number of replicas to deploy
 replicaCount: 1
 
-## @param containerPorts.http Port for HTTP traffic
+## @param containerPorts.http Port for MCP HTTP traffic
 ## @param containerPorts.health Port for health check
 containerPorts:
   http: 5000
@@ -31,47 +30,27 @@ containerPorts:
 ##
 ## @param mcpServer.args Array of arguments to pass to the MCP server container, overrides other settings
 ## @param mcpServer.enableHealthCheck Enable health check endpoint
-## @param mcpServer.transport Transport protocol for the server
-## @param mcpServer.oasPath List of paths to OpenAPI specification files
-## @param mcpServer.trentoURL URL of the Trento server
-## @param mcpServer.headerName Name of the header for the API key
-## @param mcpServer.tagFilter List of tags to filter
-## @param mcpServer.verbosity Log level verbosity
+## @param mcpServer.headerName Name of the header the MCP client should use to pass the Trento Personal Access Token
 ## @param mcpServer.insecureTLS Disable TLS certificate verification
+## @param mcpServer.oasPath List of paths to OpenAPI specification files, if empty defaults to Trento Web and Wanda services
+## @param mcpServer.tagFilter List of tags to filter
+## @param mcpServer.transport Transport protocol for the server
+## @param mcpServer.trentoURL URL of the Trento server, if empty defaults to the value of the TRENTO_WEB_ORIGIN environment variable of the Trento Web deployment
+## @param mcpServer.verbosity Log level verbosity
 mcpServer:
   args: []
   enableHealthCheck: true
-  transport: streamable
-  oasPath:
-    - https://www.trento-project.io/web/swaggerui/openapi.json
-    - https://www.trento-project.io/wanda/swaggerui/openapi.json
-  trentoURL: https://demo.trento-project.io
   headerName: X-TRENTO-MCP-APIKEY
+  insecureTLS: false
+  oasPath: []
   tagFilter:
     - MCP
+  transport: streamable
+  trentoURL: ""
   verbosity: info
-  insecureTLS: false
 
 ## @param env Environment variables to pass to the container
 env: {}
-
-## @section Resource configuration
-##
-## @param resources.limits.cpu CPU limit
-## @param resources.limits.memory Memory limit
-## @param resources.limits.ephemeral-storage Ephemeral storage limit
-## @param resources.requests.cpu CPU request
-## @param resources.requests.memory Memory request
-## @param resources.requests.ephemeral-storage Ephemeral storage request
-resources:
-  limits:
-    cpu: 500m
-    memory: 512Mi
-    ephemeral-storage: "512Mi"
-  requests:
-    cpu: 100m
-    memory: 128Mi
-    ephemeral-storage: "128Mi"
 
 ## Service parameters
 ## @param service.type Service type
@@ -102,6 +81,46 @@ ingress:
     # - secretName: chart-example-tls
     #   hosts:
     #     - chart-example.local
+
+## @section Global parameters
+##
+## @param global.trentoMcpServer.servicePort Global service port for Trento MCP Server
+## @param global.trentoWanda.name Global name for Trento Wanda service
+## @param global.trentoWanda.servicePort Global service port for Trento Wanda
+## @param global.trentoWeb.name Global name for Trento Web service
+## @param global.trentoWeb.servicePort Global service port for Trento Web
+## @param global.trentoWeb.trentoWebOrigin URL of the public Trento Web instance
+global:
+  trentoMcpServer:
+    servicePort:
+  trentoWeb:
+    name:
+    servicePort:
+    trentoWebOrigin:
+  trentoWanda:
+    name:
+    servicePort:
+
+
+
+## @section Resource configuration
+##
+## @param resources.limits.cpu CPU limit
+## @param resources.limits.memory Memory limit
+## @param resources.limits.ephemeral-storage Ephemeral storage limit
+## @param resources.requests.cpu CPU request
+## @param resources.requests.memory Memory request
+## @param resources.requests.ephemeral-storage Ephemeral storage request
+resources:
+  limits:
+    cpu: 500m
+    memory: 512Mi
+    ephemeral-storage: "512Mi"
+  requests:
+    cpu: 100m
+    memory: 128Mi
+    ephemeral-storage: "128Mi"
+
 
 ## @section Probes
 ##
